# debouw

./: .env.example  .gitignore  LIMITATIONS.md  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 4f9d56aedd52_add_region_to_permit_projects.py  62d866f60c16_add_risk_narration_cache.py  85930902ba49_add_brussels_score_diff_columns.py  d8269d3ed50d_add_rvvb_backfill_tables.py  e9761d793952_initial.py
debouw/: cli.py  config.py  logging_setup.py  pipeline.py
debouw/ingest/: circuit_breaker.py  enrich_geopunt.py  geocode.py  http.py  pdf.py  pdf_features.py  url_safety.py
debouw/ingest/sources/: __init__.py  base.py  brussels.py  gent.py  inzageloket.py  rvvb.py
debouw/models/: permit.py
debouw/risk/: cache.py  calibration.py  engine.py  extract_arrest.py  features.py  interface.py  narrate.py  precedents.py  rules.py  scoring.py  stub.py  taxonomy.py
debouw/risk/eval/: __init__.py  gold_set.jsonl  synthetic_fixtures.py
debouw/storage/: db.py  read.py  repository.py  schema.py
debouw/ui/: __init__.py  app.py  components.py  theme.py
tests/: conftest.py  test_brussels_score_differentiation.py  test_calibration.py  test_circuit_breaker.py  test_engine.py  test_engine_precedents.py  test_enrich_geopunt.py  test_extract_arrest.py  test_features.py  test_geocode.py  test_migration_0004.py  test_migration_85930902ba49.py  test_models.py  test_narrate.py  test_parser_brussels.py  test_parser_gent.py  test_parser_inzageloket.py  test_parser_inzageloket_schema_drift.py  test_parser_rvvb.py  test_pdf_features.py  test_pdf_guard.py  test_pipeline_e2e.py  test_precedents.py  test_repository.py  test_rules.py  test_scoring.py  test_scoring_alpha04.py  test_taxonomy.py  test_ui_components.py  test_url_safety.py
tests/fixtures/: gent_detail_minimal.html  gent_detail_with_address.html  gent_detail_with_pdfs.html  gent_index.html
tests/fixtures/brussels/: detail_error_weight.html  detail_minimal.html  detail_sample.html  listing_full.html
(+13 files in other folders)
