[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "debouw"
version = "0.1.0"
description = "Belgian permit risk monitoring"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "pydantic-settings",
    "httpx>=0.26",
    "asyncio-throttle",
    "tenacity",
    "structlog",
    "orjson",
    "python-dotenv",
    "pyyaml",
    "sqlalchemy[asyncio]>=2",
    "aiosqlite",
    "alembic",
    "typer",
    "pdfplumber",
    "lancedb",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
debouw = "debouw.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["debouw"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
