[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "debouw"
version = "0.1.0"
description = "Belgian permit risk monitoring"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "pydantic-settings",
    "httpx>=0.26",
    "asyncio-throttle",
    "tenacity",
    "structlog",
    "orjson",
    "python-dotenv",
    "pyyaml",
    "sqlalchemy[asyncio]>=2",
    "aiosqlite",
    "alembic",
    "typer",
    "pdfplumber",
    "lancedb",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.2,<6; python_version<'3.14'",
    "streamlit>=1.40,<2",
    "streamlit-folium>=0.20,<1",
    "folium>=0.17,<1",
    "geopy>=2.4,<3",
    "anthropic>=0.40,<1",
    "openai>=1.50,<2",
    "lancedb>=0.10,<0.20",
    "pyarrow",
    "tiktoken",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "respx",
]

[project.scripts]
debouw = "debouw.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["debouw"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=debouw --cov-fail-under=70"
